# cheese-coffee

./: README.md  package.json
cheese-coffee/db/: build-db.ts
emoji-kitchen-scan/: .gitignore  Dockerfile  emoji-kitchen-scan.py  pyproject.toml  sample.csv  sample.sqlite3
